--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,7 @@
-body {
-    background: blue;
+:root {
+    --color-primary: #2584ff;
+    --color-secondary: #00d9ff;
+    --color-accent: #ff3400;
+    --collor-heading: #1b0760;
+    --color-body: #918ca4;
 }
