--- a/css/style.css
+++ b/css/style.css
@@ -5,19 +5,20 @@
     --color-headings: #1b0760;
     --color-body: #918ca4;
 }
+
 /*Typography*/
-html{
+html {
     font-size: 62.5%;
 }
 
-body{
+body {
     font-family: Inter, Arial, Helvetica, sans-serif;
     font-size: 2.4rem;
     line-height: 1.5;
     color: var(--color-body)
 }
 
-h1,h2,h3 {
+h1, h2, h3 {
     color: var(--color-headings);
     margin-bottom: 1rem;
 
@@ -47,9 +48,11 @@ p {
     h1 {
         font-size: 8rem;
     }
+
     h2 {
         font-size: 4rem;
     }
+
     h3 {
         font-size: 2.4rem;
     }
@@ -63,7 +66,7 @@ a {
 }
 
 .link-arrow {
-    color:var(--color-accent);
+    color: var(--color-accent);
     text-transform: uppercase;
     font-size: 2rem;
     font-weight: bold;
@@ -83,4 +86,38 @@ a {
     .link-arrow {
         font-size: 1.5rem;
     }
+}
+
+/*Badges*/
+
+.badge {
+    border-radius: 20px;
+    padding: 0.5rem 2rem;
+    font-weight: 600;
+    white-space: nowrap;
+    font-size: 2rem;
+}
+
+.badge--primary {
+    background: var(--color-secondary);
+    color: #fff;
+}
+
+.badge--secondary {
+    background: var(--color-secondary);
+    color: #fff;
+}
+
+.badge--small {
+    font-size: 1.6rem;
+}
+
+@media screen and (min-width: 1024px) {
+    .badge {
+        font-size: 1.5rem;
+    }
+    .badge--small {
+        font-size:1.2rem;
+    }
+
 }
