--- a/css/style.css
+++ b/css/style.css
@@ -204,10 +204,18 @@ a {
     padding: 2rem 3rem;
     border: 0;
     margin: 1rem 0;
+    outline: 0;
     border-radius: 40px;
     cursor: pointer;
     text-align: center;
     white-space: nowrap;
+}
+
+.btn .icon {
+    width: 2rem;
+    height: 2rem;
+    margin-right: 1rem;
+    vertical-align: middle;
 }
 
 .btn--primary {
@@ -289,6 +297,7 @@ a {
 .input-group .input { /*To remove the border of the input*/
     border: 0;
     flex-grow: 1;
+    padding: 1.5rem 2rem;
 }
 
 .input-group .btn {
@@ -705,5 +714,31 @@ a {
     .hero__content {
         text-align: left;
         align-self: center;
+    }
+}
+
+/*Block Domain*/
+.block-domain .input-group {
+    box-shadow: 0 0 30px 20px #e6ebee;
+    border: 0;
+    margin: 4rem auto;
+    max-width: 670px;
+
+}
+
+.block-domain__prices {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(2, 6rem);
+    font-size: 2rem;
+    font-weight: 600;
+    justify-items: center;
+    max-width: 700px;
+    margin: 0 auto;
+}
+
+@media screen and (min-width: 768px) {
+    .block-domain__prices {
+        grid-template-columns: repeat(auto-fit, minmax(10rem, 1fr));
     }
 }
