--- a/css/style.css
+++ b/css/style.css
@@ -772,3 +772,28 @@ a {
     max-width: 500px;
     margin: 0 auto;
 }
+
+/*Features*/
+.feature {
+    gap: 4rem 3rem;
+    margin: 12rem 0;
+}
+
+.feature:first-of-type {
+    margin:6rem;
+}
+
+.feature__heading {
+    margin: 1rem 0;
+}
+
+.feature__image {
+    width: 100%;
+}
+
+@media screen and (min-width: 768px) {
+    .feature:nth-of-type(even) .feature__content {
+        order: 2;
+    }
+}
+
