--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,8 @@
+::selection {
+    background: var(--color-primary);
+    color: white;
+}
+
 :root {
     --color-primary: #2584ff;
     --color-secondary: #00d9ff;
@@ -42,6 +47,7 @@ h2 {
 
 h3 {
     font-size: 3rem;
+    font-weight: 500;
 }
 
 p {
@@ -137,7 +143,6 @@ a {
 .list {
     list-style: none;
     padding-left: 0;
-    color: var(--color-headings);
 }
 
 .list--inline .list__item {
@@ -148,6 +153,8 @@ a {
 .list--tick {
     list-style-image: url(../images/tick.svg);
     padding-left: 3rem;
+    color: var(--color-headings);
+
 }
 
 .list--tick .list__item {
@@ -417,6 +424,7 @@ a {
 
 .media {
     display: flex;
+    margin: 4rem;
 }
 
 .media__title {
@@ -625,18 +633,18 @@ a {
     color: #7b858b;
 }
 
-.block--dark .block__heading {
+.block--dark h1, h2, h3 {
     color: #fff;
 }
 
-.block__skewed-right {
+.block--skewed-right {
     padding-bottom: calc(var(--padding-vertical) + 4rem);
-    clip-path: polygon(0% 0%, 100% 0%, 100% 100%, 0% 80%);
+    clip-path: polygon(0% 0%, 100% 0%, 100% 100%, 0% 90%);
 }
 
-.block__skewed-left {
+.block--skewed-left {
     padding-bottom: calc(var(--padding-vertical) + 4rem);
-    clip-path: polygon(0% 0%, 100% 0%, 100% 80%, 0% 100%);
+    clip-path: polygon(0% 0%, 100% 0%, 100% 90%, 0% 100%);
 }
 
 .container {
@@ -709,10 +717,6 @@ a {
 }
 
 /*Hero*/
-.hero {
-    clip-path: polygon(0% 0%, 100% 0%, 100% 80%, 0% 100%);
-
-}
 
 .hero__tagline {
     font-size: 2rem;
@@ -726,7 +730,7 @@ a {
 }
 
 @media screen and (min-width: 768px) {
-    .hero{
+    .hero {
         padding-top: 0;
     }
 
@@ -780,7 +784,7 @@ a {
 }
 
 .feature:first-of-type {
-    margin:6rem;
+    margin: 6rem;
 }
 
 .feature__heading {
@@ -797,3 +801,23 @@ a {
     }
 }
 
+/*ShowCase Block*/
+
+.block-showcase__image > img {
+    width: 100%;
+}
+
+@media screen and (min-width: 768px) {
+    .block-showcase .grid {
+        grid-template-columns: 50% 50%;
+    }
+
+    .block-showcase__image {
+        justify-self: end;
+    }
+
+    .block-showcase__image > img {
+        width: auto;
+        max-width: 700px;
+    }
+}
