--- a/css/style.css
+++ b/css/style.css
@@ -113,7 +113,7 @@ a {
 }
 
 .badge--primary {
-    background: var(--color-secondary);
+    background: var(--color-primary);
     color: #fff;
 }
 
@@ -175,7 +175,7 @@ a {
     height: 40px;
 }
 
-.icon--snall {
+.icon--small {
     width: 30px;
     height: 30px;
 }
@@ -240,7 +240,7 @@ a {
 }
 
 .btn--secondary:hover {
-    background: #00c8eb;
+    background: #05cdf0;
 }
 
 .btn--accent {
@@ -418,6 +418,9 @@ a {
     .plan__billing-cycle {
         font-size: 1.6rem;
     }
+     .plan__description {
+    font-size: 1.7rem;
+  }
 }
 
 /*Media*/
@@ -436,7 +439,7 @@ a {
 }
 
 .media__image {
-    margin-top: 2rem;
+    margin-top: 1rem;
 }
 
 /*Quotes*/
@@ -515,6 +518,7 @@ a {
 
 .testimonial__image {
     position: relative;
+    margin: 0 3rem;
 }
 
 .testimonial__image > img {
@@ -528,12 +532,17 @@ a {
 }
 
 @media screen and (min-width: 768px) {
+    .testimonial_image {
+        margin: 0;
+    }
+
     .testimonial .quote, .testimonial .quote__author {
         font-size: 2.4rem;
     }
 
     .testimonial .quote {
         margin-left: 6rem;
+        margin-right: 0;
     }
 }
 
@@ -588,7 +597,7 @@ a {
 
 .collapsible__heading {
     margin-top: 0;
-    font-size: 2rem;
+    font-size: 3rem;
 }
 
 .collapsible__chevron {
@@ -621,6 +630,7 @@ a {
 
 .block__header {
     text-align: center;
+    margin-bottom: 4rem;
 
 }
 
@@ -633,7 +643,7 @@ a {
     color: #7b858b;
 }
 
-.block--dark h1, h2, h3 {
+.block--dark h1, .block--dark h2, .block--dark h3 {
     color: #fff;
 }
 
@@ -779,12 +789,12 @@ a {
 
 /*Features*/
 .feature {
-    gap: 4rem 3rem;
+    gap: 4rem 2rem;
     margin: 12rem 0;
 }
 
 .feature:first-of-type {
-    margin: 6rem;
+    margin-top: 6rem;
 }
 
 .feature__heading {
@@ -819,5 +829,80 @@ a {
     .block-showcase__image > img {
         width: auto;
         max-width: 700px;
+    }
+}
+/*Footer*/
+.footer {
+    background: #232323;
+}
+
+.footer a {
+    color: #777;
+    transition: color  .3s;
+}
+
+.footer a:hover {
+    color: #fff;
+}
+
+.footer__section {
+    padding: 2rem;
+    border-bottom: 1px solid #393939;
+}
+
+.footer__section .list {
+    margin: 0;
+}
+
+.footer__heading {
+    text-transform: uppercase;
+    font-weight: 600;
+}
+
+.footer__brand {
+    margin-top: 5rem;
+    text-align: center;
+}
+
+.footer__brand img {
+    width: 100%;
+    max-width: 230px;
+}
+
+.footer__copyright {
+    font-size: 2.1rem;
+    color: white;
+    opacity: .3;
+}
+
+@media screen and (min-width: 768px){
+    .footer__sections {
+        grid-template-columns: repeat(auto-fit, minmax(10rem, 1fr)) ;
+    }
+
+    .footer .collapsible__chevron {
+        display: none;
+    }
+
+    .footer .collapsible__content {
+        opacity: 1;
+        max-height: 100%;
+    }
+
+    .footer__brand {
+        order: -1;
+        margin-top: 1rem;
+    }
+
+    .footer__copyright {
+        font-size: 1.5rem;
+    }
+
+    .footer__section {
+        border: 0;
+    }
+
+    .footer__heading {
+        font-size: 1.6rem;
     }
 }
