--- a/components/hero.html
+++ b/components/hero.html
@@ -5,6 +5,10 @@
             <p class="hero__tagline">Deploy your website in less than 60 seconds.</p>
             <a href="" class="btn btn--accent btn--stretched">Get Started</a>
         </header>
-        <img class="hero__image" src="images/banner.png" alt="">
+        <picture>
+            <source type="img/webp" srcset="images/banner.webp 1x, images/banner@2x.webp 2x">
+            <source type="img/jpg" srcset="images/banner.jpg 1x, images/banner@2x.jpg 2x">
+            <img class="hero__image" src="images/banner.png" alt="">
+        </picture>
     </div>
 </section>
